@@ -34,6 +34,7 @@ version <next>:
 - Wave64 demuxer
 - IEC-61937 compatible Muxer
 - TwinVQ decoder
+- Bluray (PGS) subtitle decoder
 
 
 
